scripts/simple_cluster_config/apps/nginx/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: nginx-ingress2
spec:
  ingressClassName: nginx
  rules:
    - host: westie.dev.to
      http:
        paths:
        - path: /nginx(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port: 
                number: 80
